# miby

./: .gitignore  README.md  adb.py  main.py  make_ota.py  requirements.txt  test.sh
firmware/extracts/: README.md
firmware/sources/: README.md
scripts/: adb-enforcer  adb-postmount  add-adb-init.sh  ui_app
ui/: CMakeLists.txt  README.md  build.sh  clean.sh  toolchain-mips.cmake
ui/include/: lv_conf.h  lv_drv_conf.h
ui/src/: main.cpp
ui/src/pages/: file_explorer.cpp  file_explorer.h  mesh_demo.cpp  mesh_demo.h
